# avr-boilerplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: atmel-software-framework.cmake  generic-gcc-avr.cmake  git-status.cmake
conf/: conf_application.h  conf_application.h.in  conf_board.h  conf_build.h.in  conf_clock.h  conf_sleepmgr.h  conf_st7565r.h  conf_sysfont.h  conf_usart_spi.h  conf_usb.h
include/: asf.h
src/: avr_boilerplate.c  init.c  main.c
